Forgot to add frotz plugin.info file

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,57 @@ target/
 
 # SublimeLinter config file
 .sublimelinterrc
+
+# Ignore the games from textPlayer
+plugins/speechhandler/frotz/games/AMFV.z5
+plugins/speechhandler/frotz/games/Advent.z5
+plugins/speechhandler/frotz/games/Adventureland.z5
+plugins/speechhandler/frotz/games/Balances.z5
+plugins/speechhandler/frotz/games/BrandX.z5
+plugins/speechhandler/frotz/games/Murdac.z5
+plugins/speechhandler/frotz/games/Parc.z5
+plugins/speechhandler/frotz/games/acorncourt.z5
+plugins/speechhandler/frotz/games/amish.z5
+plugins/speechhandler/frotz/games/awaken.z5
+plugins/speechhandler/frotz/games/break-in.z5
+plugins/speechhandler/frotz/games/building.z5
+plugins/speechhandler/frotz/games/bunny.z5
+plugins/speechhandler/frotz/games/candy.z5
+plugins/speechhandler/frotz/games/causality.z5
+plugins/speechhandler/frotz/games/cavetrip.z5
+plugins/speechhandler/frotz/games/cheater.z5
+plugins/speechhandler/frotz/games/cia.z5
+plugins/speechhandler/frotz/games/curses.z5
+plugins/speechhandler/frotz/games/death.z5
+plugins/speechhandler/frotz/games/deephome.z5
+plugins/speechhandler/frotz/games/detective.z5
+plugins/speechhandler/frotz/games/enter.z5
+plugins/speechhandler/frotz/games/fable.z5
+plugins/speechhandler/frotz/games/frozen.z5
+plugins/speechhandler/frotz/games/gold.z5
+plugins/speechhandler/frotz/games/inhumane.z5
+plugins/speechhandler/frotz/games/jewel.z5
+plugins/speechhandler/frotz/games/karn.z5
+plugins/speechhandler/frotz/games/library.z5
+plugins/speechhandler/frotz/games/lily.z5
+plugins/speechhandler/frotz/games/loose.z5
+plugins/speechhandler/frotz/games/mansion.z5
+plugins/speechhandler/frotz/games/minster.z5
+plugins/speechhandler/frotz/games/night.z5
+plugins/speechhandler/frotz/games/omniquest.z5
+plugins/speechhandler/frotz/games/parallel.z5
+plugins/speechhandler/frotz/games/pentari.z5
+plugins/speechhandler/frotz/games/piracy_2.z5
+plugins/speechhandler/frotz/games/reverb.z5
+plugins/speechhandler/frotz/games/sherbet.z5
+plugins/speechhandler/frotz/games/spirit.z5
+plugins/speechhandler/frotz/games/spot.z5
+plugins/speechhandler/frotz/games/temple.z5
+plugins/speechhandler/frotz/games/theatre.z5
+plugins/speechhandler/frotz/games/tryst205.z5
+plugins/speechhandler/frotz/games/zenon.z5
+plugins/speechhandler/frotz/games/zork1.corpus
+plugins/speechhandler/frotz/games/zork1.z5
+plugins/speechhandler/frotz/games/zork2.z5
+plugins/speechhandler/frotz/games/zork3.z5
+plugins/speechhandler/frotz/games/ztuu.z5
